plugins {
  id("java-library")
  id("configure-java")
  id("groovy")
  id("org.springframework.boot")
  id 'org.graalvm.buildtools.native'
}

description = "Standard configuration of standalone version of MQTT Broker"

dependencies {
  implementation projects.application
}

graalvmNative {
  toolchainDetection = true
  binaries {
    main {
      sharedLibrary = false
      buildArgs.add("--enable-preview")
      javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(25)
        vendor = JvmVendorSpec.matching("GraalVM Community")
      }
    }
  }
}

jar {
  from(sourceSets.aot.output)
}

springBoot {
  mainClass = project(':application').tasks.bootJar.mainClass
}

processAot {
  jvmArgs([
      '-Dauthentication.credentials-source.database.enabled=true',
      '-Dauthentication.credentials-source.file.enabled=true',
      '-Dauthentication.provider.basic.enabled=true',
      '-Dmqtt.external.tls.network.enabled=true',
  ])
}
